--- a/CaixaEconomica.Beneficio.Dominio/CaixaEconomica.Beneficio.Dominio.csproj
+++ b/CaixaEconomica.Beneficio.Dominio/CaixaEconomica.Beneficio.Dominio.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Servicos\" />
+    <Folder Include="Interfaces\Notificacoes\" />
+    <Folder Include="Interfaces\Repositorios\" />
+    <Folder Include="Notificacoes\" />
+  </ItemGroup>
+
 </Project>
