--- a/CaixaEconomica.Beneficio.Testes.Dominio/CaixaEconomica.Beneficio.Testes.Dominio.csproj
+++ b/CaixaEconomica.Beneficio.Testes.Dominio/CaixaEconomica.Beneficio.Testes.Dominio.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CaixaEconomica.Beneficio.Dominio\CaixaEconomica.Beneficio.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
